--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,13 +34,13 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:configChanges="orientation"
+        android:screenOrientation="portrait" >
         <activity
             android:name=".MainActivity"
-            android:configChanges="orientation"
             android:label="@string/app_name"
-            android:launchMode="singleInstance"
-            android:screenOrientation="portrait" >
+            android:launchMode="singleInstance" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,9 +49,7 @@
         </activity>
         <activity
             android:name=".CalendarView"
-            android:configChanges="orientation"
-            android:label="@string/title_activity_calendar"
-            android:screenOrientation="portrait" >
+            android:label="@string/title_activity_calendar">
         </activity>
         <activity
             android:name=".SettingsActivity"
